--- a/Starter3D/Starter3D/packages.config
+++ b/Starter3D/Starter3D/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net451" />
+  <package id="netDXF" version="0.9.3" targetFramework="net451" />
 </packages>
