--- a/Starter3D/Starter3D.API/Starter3D.API.csproj
+++ b/Starter3D/Starter3D.API/Starter3D.API.csproj
@@ -56,6 +56,8 @@
     <Compile Include="resources\IMaterial.cs" />
     <Compile Include="resources\IMaterialFactory.cs" />
     <Compile Include="resources\IResourceManager.cs" />
+    <Compile Include="resources\IShader.cs" />
+    <Compile Include="resources\IShaderFactory.cs" />
     <Compile Include="resources\Material.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="math\BoundingBox.cs" />
@@ -66,6 +68,8 @@
     <Compile Include="renderer\IRenderer.cs" />
     <Compile Include="resources\MaterialFactory.cs" />
     <Compile Include="resources\ResourceManager.cs" />
+    <Compile Include="resources\Shader.cs" />
+    <Compile Include="resources\ShaderFactory.cs" />
     <Compile Include="resources\XmlDataNode.cs" />
     <Compile Include="scene\nodes\BaseSceneNode.cs" />
     <Compile Include="scene\nodes\CameraNode.cs" />
