--- a/Starter3D/Starter3D.UI/Starter3D.UI.csproj
+++ b/Starter3D/Starter3D.UI/Starter3D.UI.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5DF4039D-A058-4E23-A37E-AAD79F07F207}</ProjectGuid>
+    <ProjectGuid>{7DAFFCB2-D20B-491E-9E7F-4B2B5406D1EF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Starter3D.API.OpenGLRendering</RootNamespace>
-    <AssemblyName>Starter3D.API.OpenGLRendering</AssemblyName>
+    <RootNamespace>Starter3D.UI</RootNamespace>
+    <AssemblyName>Starter3D.UI</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,10 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="OpenTK, Version=1.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Starter3D\Libraries\OpenTK.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,13 +40,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="OpenGLRenderer.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Starter3D.API\Starter3D.API.csproj">
-      <Project>{3567CAD0-DE95-4BA8-98DE-750B75DCB45A}</Project>
-      <Name>Starter3D.API</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
