Window resize handling

--- a/Starter3D/Starter3D.Plugin.PixelShader/Starter3D.Plugin.PixelShader.csproj
+++ b/Starter3D/Starter3D.Plugin.PixelShader/Starter3D.Plugin.PixelShader.csproj
@@ -82,6 +82,32 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="images\" />
+    <Folder Include="shaders\direct3d\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="shaders\opengl\passThroughFragment.glsl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="shaders\opengl\mandelbrotFragment.glsl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="shaders\opengl\pixelShaderVertex.glsl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="shaders\opengl\raytracerFragment.glsl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="shaders\opengl\voronoiFragment.glsl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
