New BRDFs added for testing material editor

--- a/Starter3D/Starter3D.Renderers/Starter3D.Renderers.csproj
+++ b/Starter3D/Starter3D.Renderers/Starter3D.Renderers.csproj
@@ -140,5 +140,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="shaders\opengl\templateFragment.glsl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 </Project>
