--- a/Starter3D/Starter3D.Application/Starter3D.Application.csproj
+++ b/Starter3D/Starter3D.Application/Starter3D.Application.csproj
@@ -44,6 +44,14 @@
       <Project>{3567CAD0-DE95-4BA8-98DE-750B75DCB45A}</Project>
       <Name>Starter3D.API</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Starter3D.Plugin.MaterialEditor\Starter3D.Plugin.MaterialEditor.csproj">
+      <Project>{a0cc8134-f678-4413-8135-a8bb09e1b6d8}</Project>
+      <Name>Starter3D.Plugin.MaterialEditor</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Starter3D.Plugin.PixelShader\Starter3D.Plugin.PixelShader.csproj">
+      <Project>{5407e771-ef7f-4b2c-8c75-a34720b2732f}</Project>
+      <Name>Starter3D.Plugin.PixelShader</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Starter3D.Renderers\Starter3D.Renderers.csproj">
       <Project>{78127754-23c1-4d69-a528-ae46cad6aec0}</Project>
       <Name>Starter3D.Renderers</Name>
@@ -67,9 +75,11 @@
       <HintPath>..\packages\Autofac.3.5.2\lib\net40\Autofac.dll</HintPath>
     </Reference>
     <Reference Include="OpenTK">
-      <HintPath>..\Starter3D\Libraries\OpenTK.dll</HintPath>
+      <HintPath>..\libraries\OpenTK.dll</HintPath>
     </Reference>
-    <Reference Include="OpenTK.GLControl, Version=1.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL" />
+    <Reference Include="OpenTK.GLControl">
+      <HintPath>..\libraries\OpenTK.GLControl.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
